--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		</div>
 		
 		<div>
-			<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-			<div class="elfsight-app-5561c781-67d8-4864-8446-ac4180ea78fa" data-elfsight-app-lazy></div>
+			<script src="https://static.elfsight.com/platform/platform.js" async></script>
+			<div class="elfsight-app-89bf94cf-5751-45aa-8703-eb964f8ee4c3" data-elfsight-app-lazy></div>
 		</div>
 
 		<!-- Publicidad Superior -->
