--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
 			<iframe allowtransparency="yes" border="0" frameborder="no" height="100%" width="100%" marginheight="0px" marginwidth="0" scrolling="no" src="iframe/reloj.html" style="width:320px; height:100%;"></iframe>
 		</div>
 
+		<!-- Redes Sociales -->
+        <div class="slideshow-container" style="text-align: center; line-height:0;">
+
+        	<a href="" target="_blank">
+        		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
+        	</a>
+
+            <a href="" target="_blank">
+                <img src="img/bottom/bottom-facebook.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="facebook.webp/" style="width:120px">
+            </a>
+
+            <a href="" target="_blank">
+                <img src="img/bottom/bottom-threads.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="instagram.webp/" style="width:120px">
+            </a>
+
+            <a href="" target="_blank">
+                <img src="img/bottom/bottom-youtube.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
+            </a>
+
+            <a href="" target="_blank">
+                <img src="img/bottom/bottom-playstore.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
+            </a>
+        </div>
+
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
 
