--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+    	<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-K5NWHPHXLT"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-K5NWHPHXLT');
+		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <link rel="icon" type="image/png" href="img/cover.webp" />
         <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -18,6 +27,14 @@
 		<link rel="preload" href="img/cover.webp" as="image">
 		<link rel="preload" href="img/bg_site.webp" as="image">
 		<link rel="preload" href="/player.html">
+
+		<meta name="description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<meta property="og:title" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<meta property="og:image" content="img/cover.webp">
+		<meta property="og:site_name" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<meta property="og:description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<meta content="yes" name="apple-mobile-web-app-capable">
+		<meta name="keywords" content="radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
 	</head>
 
 	<style>A {text-decoration: none;}</style>
