--- a/index.html
+++ b/index.html
@@ -52,19 +52,23 @@
 		<!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
 
-        	<a href="" target="_blank">
+        	<a href="https://twitter.com/comunastereofm" target="_blank">
         		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
         	</a>
 
-            <a href="" target="_blank">
+        	<a href="https://www.tiktok.com/@radio.comuna.ster?lang=en" target="_blank">
+        		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
+        	</a>
+
+            <a href="https://www.facebook.com/profile.php?id=61565659828465&locale=es_LA" target="_blank">
                 <img src="img/bottom/bottom-facebook.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="facebook.webp/" style="width:120px">
             </a>
 
-            <a href="" target="_blank">
+            <a href="https://www.threads.net/@comunastereofm" target="_blank">
                 <img src="img/bottom/bottom-threads.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="instagram.webp/" style="width:120px">
             </a>
 
-            <a href="" target="_blank">
+            <a href="https://www.youtube.com/channel/UCAA2bB0gXmyIfTR9Oenro_w" target="_blank">
                 <img src="img/bottom/bottom-youtube.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
             </a>
 
@@ -73,7 +77,7 @@
             </a>
         </div>
 
-		<!-- Publicidad Superior -->
+		<!-- Publicidad Superior
 		<div class="slideshow-container">
 
 			<div class="mySlides fade">
@@ -91,14 +95,14 @@
 				<a href="#" class="image featured"><img src="img/publicidad-3.png" alt="" style="width:100%">
 			</div>
 
-		</div>
+		</div> -->
 
-		<!-- Publicidad Superior DOT -->
+		<!-- Publicidad Superior DOT
 		<div style="text-align:center">
 			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
-		</div>
+		</div> -->
 		
 		<div>
 			<script src="https://static.elfsight.com/platform/platform.js" async></script>
