--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <html lang="es">
     <head>
     	<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-K5NWHPHXLT"></script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M211RWMNEY"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
-		  gtag('config', 'G-K5NWHPHXLT');
+		  gtag('config', 'G-M211RWMNEY');
 		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
