--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-    	<!-- Google tag (gtag.js) -->
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M211RWMNEY"></script>
 		<script>
@@ -41,6 +40,26 @@
 	<style>A {text-decoration: none;}</style>
 	
 	<body>
+
+		<!-- Publicidad Superior -->
+		<div class="slideshow-container">
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
+			</div>
+
+		</div>
 
 		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="./player.html" style="width:100%; height:90vh;">
 		</iframe>
@@ -78,30 +97,8 @@
             </a>
         </div>
 
-		<!-- Publicidad Superior
-		<div class="slideshow-container">
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/publicidad-2.png" alt="" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/publicidad-3.png" alt="" style="width:100%">
-			</div>
-
-		</div> -->
-
 		<!-- Publicidad Superior DOT
 		<div style="text-align:center">
-			<span class="dot"></span>
-			<span class="dot"></span>
 			<span class="dot"></span>
 		</div> -->
 		
