--- a/index.html
+++ b/index.html
@@ -43,40 +43,34 @@
 
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
-			</div>
-
+			<a href="" class="image featured"><img src="img/banner.png" alt="" style="width:100%"></a>
 		</div>
+
+		<!-- <div class="slideshow-container">
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
+			</div>
+
+		</div> -->
 
 		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="./player.html" style="width:100%; height:90vh;">
 		</iframe>
 
-		<!-- widget-reloj-->
+		<!-- widget-reloj
 		<div class="widget-reloj">
 			<iframe allowtransparency="yes" border="0" frameborder="no" height="100%" width="100%" marginheight="0px" marginwidth="0" scrolling="no" src="iframe/reloj.html" style="width:320px; height:100%;"></iframe>
-		</div>
+		</div>-->
 
 		<!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
 
-        	<a href="https://twitter.com/comunastereofm" target="_blank">
-        		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
+        	<a href="https://www.tiktok.com/@radio.comuna.ster?lang=en" target="_blank">
+        		<img src="img/bottom/bottom-tiktok.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
         	</a>
 
-        	<a href="https://www.tiktok.com/@radio.comuna.ster?lang=en" target="_blank">
+        	<a href="https://twitter.com/comunastereofm" target="_blank">
         		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
         	</a>
 
@@ -97,17 +91,38 @@
             </a>
         </div>
 
-		<!-- Publicidad Superior DOT
+        <!-- Publicidad Superior -->
+		<div class="slideshow-container">
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
+			</div>
+		</div>
+
+		<!-- Publicidad Superior DOT -->
 		<div style="text-align:center">
 			<span class="dot"></span>
-		</div> -->
-		
+			<span class="dot"></span>
+			<span class="dot"></span>
+		</div>
+
 		<div>
 			<script src="https://static.elfsight.com/platform/platform.js" async></script>
 			<div class="elfsight-app-89bf94cf-5751-45aa-8703-eb964f8ee4c3" data-elfsight-app-lazy></div>
 		</div>
 
-		<!-- Publicidad Superior -->
+		<!-- Publicidad inferior -->
 		<script>
 			var slideIndex = 0;
 			showSlides();
