--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img src="img/bottom/bottom-youtube.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
             </a>
 
-            <a href="" target="_blank">
+            <a href="https://play.google.com/store/apps/details?id=cxmuna.stereo" target="_blank">
                 <img src="img/bottom/bottom-playstore.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
             </a>
         </div>
