--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
-			<a href="" class="image featured"><img src="img/banner.png" alt="" style="width:100%"></a>
+			<a href="" class="image featured"><img src="img/banner.PNG" alt="" style="width:100%"></a>
 		</div>
 
 		<!-- <div class="slideshow-container">
