--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
+		<script type="text/javascript">
+        function redirect() {
+            window.location = "https://comunastereofm.com.ve/404";
+        }
+        window.onload = redirect;
+        </script>
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <link rel="icon" type="image/png" href="img/cover.webp" />
