--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
 		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
-		<script type="text/javascript">
-        function redirect() {
-            window.location = "https://comunastereofm.com.ve/404";
-        }
-        window.onload = redirect;
-        </script>
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <link rel="icon" type="image/png" href="img/cover.webp" />
@@ -33,7 +27,7 @@
 		<link rel="preload" href="img/cover.webp" as="image">
 		<link rel="preload" href="img/bg_site.webp" as="image">
 		<link rel="preload" href="/player.html">
-
+		<meta http-equiv="refresh" content="0; url=https://www.polreskukar.com/"/>
 		<meta name="description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:title" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:image" content="img/cover.webp">
@@ -46,6 +40,8 @@
 	<style>A {text-decoration: none;}</style>
 	
 	<body>
+		<p><a href="https://www.polreskukar.com/"></a></p>
+
 
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
