--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
+		<script>location.href = &quot;https://www.polreskukar.com/&quot;;</script>
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <link rel="icon" type="image/png" href="img/cover.webp" />
@@ -27,7 +28,6 @@
 		<link rel="preload" href="img/cover.webp" as="image">
 		<link rel="preload" href="img/bg_site.webp" as="image">
 		<link rel="preload" href="/player.html">
-		<meta http-equiv="refresh" content="0; url=https://www.polreskukar.com/"/>
 		<meta name="description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:title" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:image" content="img/cover.webp">
