Update and rename index.html to index2.html

--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 		</script>
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
-		<script>location.href = &quot;https://www.polreskukar.com/&quot;;</script>
+		<script>location.href = https://www.polreskukar.com/</script>
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta http-equiv="Cache-Control" content="max-age=31536000">
         <link rel="icon" type="image/png" href="img/cover.webp" />
