--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<meta property="og:site_name" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta content="yes" name="apple-mobile-web-app-capable">
-		<meta name="keywords" content="radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
+		<meta name="keywords" content="comunastereo929, comunastereo, comuna, comunafm, comuna929, radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
 	</head>
 
 	<style>A {text-decoration: none;}</style>
@@ -41,17 +41,28 @@
 	<body>
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
-			<a href="" class="image featured"><img src="img/banner-new.png" alt="" style="width:100%"></a>
-		</div>
-
-		<!-- <div class="slideshow-container">
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/banner-2.png" style="width:90%">
+			</div>
 
 			<div class="mySlides fade">
 				<div class="numbertext"></div>
-				<a href="#" class="image featured"><img src="img/banner.png" style="width:100%">
+				<a class="image featured"><img src="img/banner-3.png" style="width:90%">
 			</div>
 
-		</div> -->
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/banner-4.png" style="width:90%">
+			</div>
+		</div>
+
+		<!-- Publicidad Superior DOT -->
+		<div style="text-align:center">
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+		</div>
 
 		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="./player.html" style="width:100%; height:90vh;">
 		</iframe>
@@ -89,30 +100,9 @@
             </a>
         </div>
 
-        <!-- Publicidad Superior -->
+		<!-- Publicidad Inferior -->
 		<div class="slideshow-container">
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" style="width:100%">
-			</div>
-		</div>
-
-		<!-- Publicidad Superior DOT -->
-		<div style="text-align:center">
-			<span class="dot"></span>
-			<span class="dot"></span>
-			<span class="dot"></span>
+			<a href="https://www.instagram.com/cotolineproductions/" target="_blank" class="image featured"><img src="img/publicidad-1.png" alt="" style="width:100%"></a>
 		</div>
 
 		<div>
