--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>.::Comuna Stereo 92.9 FM::.</title>
         <meta charset="utf-8">
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-        <meta http-equiv="Cache-Control" content="max-age=31536000">
+        <meta http-equiv="Cache-Control" content="max-age=2419200">
         <link rel="icon" type="image/png" href="img/cover.webp" />
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -37,7 +37,7 @@
 	</head>
 
 	<style>A {text-decoration: none;}</style>
-	
+
 	<body>
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
@@ -64,7 +64,7 @@
 			<span class="dot"></span>
 		</div>
 
-		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="./player.html" style="width:100%; height:90vh;">
+		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="player/player.html" style="width:100%; height:90vh;">
 		</iframe>
 
 		<!-- widget-reloj
