--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
 		<meta property="og:site_name" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta content="yes" name="apple-mobile-web-app-capable">
-		<meta name="keywords" content="comunastereo929, comunastereo, comuna, comunafm, comuna929, radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
+		<meta name="keywords" content="comunastereo929, comunastereo, comuna, comunafm, comuna929, radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, san carlos, caracas, valencia, maracay, republica, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
 	</head>
 
 	<style>A {text-decoration: none;}</style>
 
 	<body>
+		<style type="text/css" background-image: url(img/banner-1.png);>
+			
+		</style>
 		<!-- Publicidad Superior -->
 		<div class="slideshow-container">
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/banner-1.png" style="width:90%">
+			</div>
+
 			<div class="mySlides fade">
 				<div class="numbertext"></div>
 				<a class="image featured"><img src="img/banner-2.png" style="width:90%">
@@ -59,6 +67,7 @@
 
 		<!-- Publicidad Superior DOT -->
 		<div style="text-align:center">
+			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
