--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<span class="dot"></span>
 		</div>
 
-		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="player/player.html" style="width:100%; height:90vh;">
+		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="player.html" style="width:100%; height:90vh;">
 		</iframe>
 
 		<!-- widget-reloj
